# firehose-cli

./: .gitignore  README.md  agent-prompt.txt  pyproject.toml  spec.md
src/firehose/: __init__.py  __main__.py
src/firehose/cli/: app.py
src/firehose/config/: settings.py
src/firehose/config/prompts/: analyze.md
src/firehose/core/: flattener.py  prompter.py  reporter.py  router.py  scanner.py  sequencer.py  tokenizer.py
src/firehose/models/: manifest.py  report.py  response.py
tests/: test_config.py  test_flattener.py  test_models.py  test_reporter.py  test_scanner.py  test_sequencer.py  test_tokenizer.py
